@@ -1,3 +1,11 @@
+2017-04-07  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline
+	2017-04-06  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/79733
+	* gcc.target/i386/pr79733.c: New test.
+
 2017-04-03  Peter Bergner  <bergner@vnet.ibm.com>
 
 	Backport from mainline
